--- a/PL/Pages/_Layout.cshtml
+++ b/PL/Pages/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link href="PL.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-
+    <link href="_content/Blazor.Bootstrap/blazor.bootstrap.css" rel="stylesheet" />
 </head>
 <body>
     @RenderBody()
