--- a/PL/Shared/NavMenu.razor
+++ b/PL/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Candidatos
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="cursos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Cursos
+            </NavLink>
+        </div>
     </nav>
 </div>
 
