--- a/PL/Shared/NavMenu.razor
+++ b/PL/Shared/NavMenu.razor
@@ -39,6 +39,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Cursos
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="randomuser">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Random user
+            </NavLink>
+        </div>
     </nav>
 </div>
 
